# SchiffscheVersenky

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SchiffscheVersenky.sln
Client/: Client.vcxproj  Client.vcxproj.filters  ClientGameState.ixx  Engine.ixx  EntryPoint.cpp  GameField.ixx  NetworkCb.ixx  NetworkQueue.cpp  NetworkQueue.h  Renderer.ixx  Resources.ixx  Scene.ixx  Timings.ixx  Vertex.hpp  client.rc
Client/draw/: Game.cpp  Scene.cpp  SceneRenderer.cpp  SceneRenderer.hpp
Client/game/: FieldSetupScene.cpp  FieldSetupScene.hpp  MenuScene.cpp  MenuScene.hpp  PlayScene.cpp  PlayScene.hpp
Client/impl/: gladimpl.cpp  imguiimpl.cpp  miscimpl.cpp
Client/scenes/: FieldSetupScene.ixx
Client/util/: FNVHash.hpp  ShaderConstants.h  imemstream.cpp  imemstream.hpp
Server/: EntryPoint.cpp  GameManagment.ixx  NetWorkIoControl.cpp  NetworkIoControl.ixx  Server.vcxproj  Server.vcxproj.filters  ShipServer.h
Shared/: GameManagment.ixx  Shared.vcxitems  SharedLegacy.h  ShipSock.h  ShipSock.ixx
client/: EntryPoint.cpp  NetworkQueue.cpp  NetworkQueue.h  client.cmake  client.rc  resource.h
client/draw/: Game.cpp  Game.hpp  Scene.cpp  Scene.hpp  SceneRenderer.cpp  SceneRenderer.hpp
client/game/: FieldSetupScene.cpp  MenuScene.cpp  (+4 more)
server/: EntryPoint.cpp  GameManager.cpp  NetWorkIoControl.cpp  NetworkIoControl.h  ShipServer.h  server.cmake
shared/: Foo.cpp  ShipSock.h  ShipSocket.h  shared.cmake
src/: BattleShip.h  BattleShip.vcxproj  BattleShip.vcxproj.filters  Buffers.ixx  DearImGUI.ixx  DispatchRoutine.ixx  Engine.ixx  EntryPoint.cpp  EntryPoint.ixx  GameField.ixx  GameManagement.ixx  GameManagementEx.ixx  GameManagment.ixx  LimaBase.ixx  MenuScene.ixx  NetEngine.ixx  NetEngineCallbacks.ixx  NetworkClientControl.ixx  NetworkControl.ixx  NetworkServerControl.ixx  Render.ixx  RenderInput.ixx  Renderer.ixx  RendererInput.ixx  Resources.ixx  Scene.ixx  ShipInfo.ixx  Timings.ixx  Vertex.hpp  Window.ixx  client.rc  resource.h
(+53 files in other folders)
